2-d lesson Ninja Common tags and atributes

--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <title>Learning HTML</title>
-
-
-
 </head>
 <body>
- <p> Hallo, world</p>
 
- <p>My first web page</p>
+<div>
+ <p> Hallo, <strong>Ninjas!</strong></p>
+ <p>My <small>first</small> web <em>page</em></p>
 
+ <a href="https://sogreen.com.ua"> the best moss is here</a>
+ <br>
+ <a href="about.html">About us</a>
+
+</div>
+
+
+<div>
+ <h1>Heading 1</h1>
+ <h2>Heading 2</h2>
+ <h4>Heading 4</h4>
+</div>
+
+  <div>
+      <ol>
+        <li>Yoshi</li>
+        <li>Luigi</li>
+        <li>Toad</li>
+
+      </ol>
+  </div>
+<!--span tag is below-->
+  <span>It's a <br>span tag</span>
+
+  <hr>
+
+  <img src="img/puppy.png" alt="a picture of a puppy">
+
+  <blockquote cite="https://oscarwildesite.com">
+    we are all in the gutter, but some of us arelooking at the stars
+  </blockquote>
+
+  <p style="color: orange;">Style me:)</p>
+   
 </body>
 </html>
