CSS 1st lesson 1st part

--- a/site/index.html
+++ b/site/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="styles.css">  
-  <title>Mario club</title>
+<head> 
+  <link rel="stylesheet" href="styles.css">
+  <title>CSS basic</title>
 </head>
 <body>
 
-    <header>
-       <h1>Marioclub</h1>
-    </header>
-    <section class="banner">
-      <img src="img/banner.png" alt="marioclub welcome banner">
-      <div class="welcome">
-        <h2>Welcome to <br><span>Marioclub</span></h2>
+  <h1>CSS basic</h1>
 
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
+    illum aliquam sequi earum iure dolor doloremque culpa cum tenetur 
+    repudiandae ut placeat dolores quod facilis, unde et voluptate ipsam
+     velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+     Reprehenderit sint doloremque minus ea velit unde consectetur vero 
+     repudiandae in. Neque commodi repudiandae minima voluptatibus officia
+      labore, fugit velit est delectus.</p>
 
-      </div>
-    </section>
+  <div>
+   
+    <h2>Ninjas available for hire</h2>
 
-    <nav class="main-nav">
-      <ul>
-        <li><a href="/join.html" class="join">Join the club</a></li>
-        <li><a href="/news.html">Latest news</a></li>
-        <li><a href="/games.html">New games</a></li>
-        <li><a href="/contact.html">contact</a></li>
-      </ul>
-
-    </nav>
- <main>
-  <article>
-    <h2>It's me, Mario</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
        illum aliquam sequi earum iure dolor doloremque culpa cum tenetur 
        repudiandae ut placeat dolores quod facilis, unde et voluptate ipsam
@@ -37,27 +27,16 @@
         Reprehenderit sint doloremque minus ea velit unde consectetur vero 
         repudiandae in. Neque commodi repudiandae minima voluptatibus officia
          labore, fugit velit est delectus.</p>
-  </article>
-  <ul class="images">
-    <li> <img src="img/thumb-1.png" alt="mario thumb-1"></li>
-    <li><img src="img/thumb-2.png" alt="mario thumb-2"></li>
-  </ul>
+  
+    <ul>
+      <li>Ninja Yoshi</li>
+      <li>Ninja Mario</li>
+      <li>Ninja Shaun</li>
 
- </main>
+    </ul>
+  </div>
 
- <section class="join">
-   <h2>Join today!</h2>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorem neque 
-    ipsam labore? Dolores natus fugiat maxime sunt. Provident minus fuga enim ex? 
-    Possimus molestiae nostrum quibusdam voluptate, minima quia?</p>
-    <form>
-      <input type="email" name="email" placeholder="Type email" required>
-    </form>
- </section>
-
- <footer>
-  <p class="Copyright">Copyright 2022 Marioclub</p>
- </footer>
+ 
 
 </body>
 </html>    
