CSS 2-nd lesson final

--- a/site/index.html
+++ b/site/index.html
@@ -6,35 +6,22 @@
 </head>
 <body>
 
-  <h1>CSS basic</h1>
+  <h2>Inline Elements</h2>
 
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
-    illum aliquam sequi earum iure dolor doloremque culpa cum tenetur 
-    repudiandae ut placeat dolores quod facilis, unde et voluptate ipsam
-     velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-     Reprehenderit sint doloremque minus ea velit unde consectetur vero 
-     repudiandae in. Neque commodi repudiandae minima voluptatibus officia
-      labore, fugit velit est delectus.</p>
+  <span>span tag</span>
+  <em>em tag</em>
+  <a href="">anchor tag</a>
+  <span>span tag</span>
 
-  <div>
-   
-    <h2>Ninjas available for hire</h2>
+  <div>div tag</div>
+  <div>another div tag</div>
+  <h3>h3 tag</h3>
+  <p>paragraph tag</p>
+  <ul>
+    <li>li tag</li>
+    <li>another li tag</li>
+  </ul>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
-       illum aliquam sequi earum iure dolor doloremque culpa cum tenetur 
-       repudiandae ut placeat dolores quod facilis, unde et voluptate ipsam
-        velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Reprehenderit sint doloremque minus ea velit unde consectetur vero 
-        repudiandae in. Neque commodi repudiandae minima voluptatibus officia
-         labore, fugit velit est delectus.</p>
-  
-    <ul>
-      <li>Ninja Yoshi</li>
-      <li>Ninja Mario</li>
-      <li>Ninja Shaun</li>
-
-    </ul>
-  </div>
 
  
 
