CSS Lesson 2 - Classes & selectors

--- a/site/index.html
+++ b/site/index.html
@@ -6,23 +6,26 @@
 </head>
 <body>
 
-  <h2>Inline Elements</h2>
+  <div id="content">
+    <p class="error" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum omnis, hic possimus est sapiente sunt velit soluta voluptatibus assumenda voluptatem voluptate quo? Laudantium, dolores! Impedit dicta qui libero delectus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis adipisci, culpa esse debitis est recusandae dolore praesentium ullam. Enim officiis earum iusto maiores eveniet error sed, quis consequuntur in ratione.</p>
+  
+    <p class="success">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nam atque a est aspernatur numquam adipisci et molestiae accusantium! Laudantium expedita sed aspernatur cum ducimus magnam adipisci totam magni quia.</p>
+  
+    <p class="success feed" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laboriosam, <br>
+       enim sit sequi corporis consequatur reiciendis quis et eveniet sed hic officiis rerum dolorum <br>
+        at autem ducimus non deserunt adipisci!</p>
+  
+    <p class="success feed">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptas ipsam minima beatae quibusdam. Facere consectetur, totam veritatis sequi sapiente perferendis cum ut asperiores molestias possimus optio, amet voluptatum assumenda!</p>
+  
+  </div>
+    
+     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores libero sapiente labore atque aliquid exercitationem cumque numquam excepturi! Vitae expedita corrupti repudiandae deserunt nam reprehenderit cupiditate obcaecati repellendus in quasi.</p>
+  <div class="error"> I'm an error</div>
 
-  <span>span tag</span>
-  <em>em tag</em>
-  <a href="">anchor tag</a>
-  <span>span tag</span>
-
-  <div>div tag</div>
-  <div>another div tag</div>
-  <h3>h3 tag</h3>
-  <p>paragraph tag</p>
-  <ul>
-    <li>li tag</li>
-    <li>another li tag</li>
-  </ul>
-
-
+  
+  <a href="https://google.com">google site</a> <br>
+  <a href="https://google.com">google site</a> <br>
+  <a href="https://sgmoss.com.ua">all about moss</a>
  
 
 </body>
