--- a/site/index.html
+++ b/site/index.html
@@ -2,31 +2,50 @@
 <html>
 <head> 
   <link rel="stylesheet" href="styles.css">
-  <title>CSS basic</title>
+  <title>Marioclub</title>
 </head>
 <body>
 
-  <div id="content">
-    jhgjg
-    <p class="error" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum omnis, hic possimus est sapiente sunt velit soluta voluptatibus assumenda voluptatem voluptate quo? Laudantium, dolores! Impedit dicta qui libero delectus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis adipisci, culpa esse debitis est recusandae dolore praesentium ullam. Enim officiis earum iusto maiores eveniet error sed, quis consequuntur in ratione.</p>
-  
-    <p class="success">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nam atque a est aspernatur numquam adipisci et molestiae accusantium! Laudantium expedita sed aspernatur cum ducimus magnam adipisci totam magni quia.</p>
-  
-    <p class="success feed" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laboriosam, <br>
-       enim sit sequi corporis consequatur reiciendis quis et eveniet sed hic officiis rerum dolorum <br>
-        at autem ducimus non deserunt adipisci!</p>
-  
-    <p class="success feed">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptas ipsam minima beatae quibusdam. Facere consectetur, totam veritatis sequi sapiente perferendis cum ut asperiores molestias possimus optio, amet voluptatum assumenda!</p>
-  
+ <header>
+  <h1>Marioclub</h1>
+ </header>
+ <section class="banner">
+  <img src="img/banner.png" alt="marioclub welcome banner">
+  <div class="welcome">
+    <h2>Welcome to <br> <span>Marioclub</span></h2>
   </div>
-    
-     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores libero sapiente labore atque aliquid exercitationem cumque numquam excepturi! Vitae expedita corrupti repudiandae deserunt nam reprehenderit cupiditate obcaecati repellendus in quasi.</p>
-  <div class="error"> I'm an error</div>
+ </section>
 
-  
-  <a href="https://google.com">google site</a> <br>
-  <a href="https://google.com">google site</a> <br>
-  <a href="https://sgmoss.com.ua">all about moss</a>
+ <nav class="main-nav">
+  <ul>
+    <li><a href="/join.html" class="join">Join the club</a></li>
+    <li><a href="/news.html">Latest news</a></li>
+    <li><a href="/games.html">New games</a></li>
+    <li><a href="/contact.html">Contacts</a></li>
+  </ul>
+ </nav>
+
+<main>
+  <article>
+    <h2>It's me, Mario</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ullam cupiditate sint quasi ut, totam autem, aliquam officiis porro culpa quo, sed animi possimus fugit consequuntur accusamus sit provident illum.</p>
+  </article>
+  <ul class="images">
+    <li><img src="img/thumb-1.png" alt="mario thumb 1"></li>
+    <li><img src="img/thumb-2.png" alt="mario thumb 2"></li>
+  </ul>
+</main>
+<section class="join">
+  <h2>Join today</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus distinctio quaerat exercitationem velit voluptatum qui aut nobis deleniti explicabo. Vitae blanditiis nesciunt ea dignissimos quaerat expedita aperiam nostrum modi quae?</p>
+  <form>
+    <input type="email" name="email" required placeholder="Type email">
+  </form>
+
+</section>
+<footer>
+  <p class="copyright">Copyright 2022 Marioclub</p>
+</footer>
  
 
 </body>
